Fix issue where links overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,5 @@
 html {
     font-size: 16px;
-    height: 100%;
 }
 
 body {
@@ -11,7 +10,13 @@ body {
     box-sizing: border-box;
     text-align: center;
     margin: 0;
-    height: 100%;
+}
+
+header {
+    position: fixed;
+    background-color: #272727;
+    z-index: 1;
+    width: 100%;
 }
 
 h1 {
@@ -52,13 +57,10 @@ button:hover {
 }
 
 section {
-    min-height: 350px;
-    height: 100%;
+    padding-top: 10em;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding-bottom: 5em;
 }
 
 #sectionTitle {
@@ -111,6 +113,11 @@ section {
     color: #14A76C;
 }
 
+#linksElement{
+    width: 80%;
+    word-wrap: break-word;
+}
+
 .link {
     font-family: 'Montserrat', sans-serif;
     transition: all 0.2s;
@@ -124,18 +131,9 @@ section {
     padding: 0 0.5em;
 }
 
-#linksElement{
-    width:80%;
-    word-wrap: break-word;
-}
-
 @media (min-width: 480px) {
     html {
         font-size: 18px;
-    }
-
-    section {
-        min-height: 450px;
     }
 }
 
@@ -143,28 +141,16 @@ section {
     html {
         font-size: 20px;
     }
-
-    section {
-        min-height: 500px;
-    }
 }
 
 @media (min-width: 1024px) {
     html {
         font-size: 22px;
     }
-
-    section {
-        min-height: 550px;
-    }
 }
 
 @media (min-width: 1200px) {
     html {
         font-size: 24px;
-    }
-
-    section {
-        min-height: 600px;
     }
 }
